--- a/code/style.css
+++ b/code/style.css
@@ -14,6 +14,7 @@ header {
     display: flex;
     column-gap: 10px;
     align-items: center;
+    justify-content: center;
 }
 
 
@@ -47,6 +48,10 @@ header {
 
 }
 
+.sheep {
+    font-size: 30px;
+}
+
 .intro-image {
     width: 100%;    
    
@@ -60,7 +65,7 @@ header {
     height: 50%;
     position: absolute;
     left: 0;
-    bottom: 0;
+    bottom: 3px;
     right: 0;
 }
 .intro-text h2 {
