--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,288 @@
 html {
-  background: #0025ff;
-  color: #fff;
+  background: whitesmoke;
+  color: black;
+  font-size: 15px;
+}
+body {
+  font-family: monospace;
+  background: #eee;
+}
+.nav-mobile {
+  height: 70px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  padding: 2px 0 5px 0;
+  text-transform: uppercase;
+}
+
+main {
+  display: grid;
+  grid-template-columns: 1;
+  margin: 0 auto;
+}
+
+.logo-mobile {
+  height: 75px;
+  width: 95px;
+}
+
+#checkbox {
+  display: none;
+}
+
+.nav-mobile-wrap {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  text-align: center;
+  padding: 0 10px;
+}
+.logo-wrap {
+  display: flex;
+  height: 65px;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+}
+
+#checkbox:checked ~ nav {
+  text-transform: uppercase;
+  height: 25%;
+  word-spacing: 5%;
+  border-radius: 0 0 20px 20px;
+}
+.nav-mobile-wrap nav {
+  position: absolute;
+  background-color: #bc4f22;
+  top: 4.5rem;
+  left: 0;
+  width: 50%;
+  z-index: 1;
+  height: 0;
+}
+#checkbox:checked ~ nav ul {
+  max-height: 18rem;
+  padding: 1rem 0;
+  transition: all 0.5s;
+}
+
+.nav-mobile-wrap nav ul {
+  list-style-type: none;
+  max-height: 0;
+  overflow: hidden;
+}
+.nav-mobile-wrap a {
+  color: white;
+  text-decoration: none;
+  font-weight: bold;
+}
+.mobile-nav-bars {
+  height: 20px;
+  width: 20px;
+}
+.bars-icon {
+  font-size: 30px;
+}
+.nav-icon {
+  padding: 12px;
+}
+
+.hero-section {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  display: flex;
+  background-image: url(./assets/E87C8D66-2296-4EBF-BDC1-25A67B7C9663.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  align-items: stretch;
+  justify-content: center;
+  width: 100%;
+  height: 500px;
+  font-weight: bold;
+}
+
+.hero-text-wrapper {
+  padding: 2px;
+  background-color: rgba(23, 22, 22, 0.159);
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+}
+.hero-title {
+  font-size: 25px;
+  text-transform: uppercase;
+  text-align: center;
+}
+.hero-text {
+  font-size: 20px;
+}
+.hero-button {
+  font-weight: bold;
+  letter-spacing: 5px;
+  border: none;
+  text-decoration: underline;
+  text-transform: capitalize;
+  background-color: rgba(0, 0, 0, 0);
+  color: black;
+  border-radius: 0;
+}
+
+.main-content-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+/* styling cards */
+.cards {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.cards-item {
+  display: flex;
+  padding: 1rem;
+}
+
+.card-image {
+  height: calc(13 * 1.2rem);
+  padding: 1.2rem 1.2rem 0;
+  position: relative;
+}
+
+.card-image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.cards-item {
+  filter: drop-shadow(0 0 5px rgba(0, 0, 0, 0.25));
+}
+
+.card {
+  background-color: white;
+  border-radius: 0.25rem;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+  padding-left: 30px;
+  background: repeating-linear-gradient(
+        #0000 0 calc(1.2rem - 1px),
+        #66afe1 0 1.2rem
+      )
+      right bottom / 100% 100%,
+    linear-gradient(red 0 0) 30px 0/2px 100% #fff;
+  background-repeat: no-repeat;
+  line-height: 1.2rem;
+  -webkit-mask: radial-gradient(circle 0.8rem at 2px 50%, #0000 98%, #000) 0 0/100%
+    2.4rem;
+}
+
+.card-content {
+  padding: 1.2rem;
+}
+
+h2.card-title,
+p {
+  margin: 1.2rem 0;
+}
+h2.card-title,
+a {
+  text-decoration: none;
+  font-size: 1.3em;
+  color: black;
+  text-align: center;
+}
+/* styling form */
+
+.form-wrapper {
+  display: grid;
+  grid-column: 1;
+}
+.container {
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+}
+
+.image-form-wrapper {
+  background-image: url(./assets/newsletter.jpg);
+  width: 100%;
+  height: 500px;
+  object-fit: cover;
+  background-size: cover;
+  border-radius: 1em 1em 0 0;
+  padding: 5px;
+}
+
+.form-text-wrapper {
+  display: grid;
+  align-content: center;
+  justify-items: center;
+  padding: 5px;
+  text-transform: uppercase;
+}
+
+.form {
+  display: grid;
+  align-content: center;
+  justify-items: stretch;
+}
+
+.email {
+  padding: 0.5em 0 0.5em 0;
+  line-height: 3;
+  border: 1px solid grey;
+  border-radius: 0.5em;
+  margin-bottom: 1em;
+  width: 100%;
+  text-align: center;
+}
+::placeholder {
+  color: #000;
+}
+
+.subscribe {
+  padding: 0.5em 0 0.5em 0;
+  line-height: 3;
+  border: 1px solid #bc4f22;
+  border-radius: 0.5em;
+  margin-bottom: 1em;
+  background-color: #bc4f22;
+  color: white;
+  text-align: center;
+  font-weight: bold;
+  letter-spacing: 3px;
+}
+
+/* styling footer */
+
+footer {
+  display: grid;
+  grid-template-columns: 70% 30%;
+  justify-items: start;
+}
+.copyright {
+  text-align: center;
+  font-weight: bold;
+}
+.follow {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-self: flex-end;
+  justify-content: flex-end;
+}
+.social-icon {
+  margin: auto;
 }
