--- a/code/style.css
+++ b/code/style.css
@@ -10,7 +10,8 @@
 
 html {
   font-family: 'Futura', Helvetica, sans-serif;
-  font-size: 14px;
+  font-size: 1rem;
+  font-weight: 400;
   padding: 0;
   margin: 0;
   box-sizing: border-box;
@@ -20,19 +21,186 @@ body {
   background: linear-gradient(145deg, var(--primary-color) 15%, var(--secondary-color));
   color: var(--base-text);
   background-repeat: no-repeat;
-  background-size: cover;
+  background-attachment: fixed;
   overflow-x: hidden;
   height: 100%;
   box-sizing: inherit;
+  margin: 0;
 }
 
-header {
+main {
+  position: relative;
+  margin: 100px 2%;
+}
+
+img {
+  max-width: 100%;
+  display: block;
+}
+
+video {
+  max-width: 100%;
+  margin: auto;
+}
+
+button {
+  border-radius: 5%;
+  background-color: var(--complement-color-1);
+  padding: 0.5em 1em;
+  text-align: center;
+  text-transform: uppercase;
+  text-size-adjust: 0.6em;
+  border: none;
+  margin: 0;
+}
+
+li {
+  margin-bottom: 1rem;
+}
+
+footer {
+  background-color: var(--secondary-color);
+}
+
+/* Layout */
+
+.wrapper {
+  max-width: 1440px;
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  gap: 10px;
+  box-sizing: border-box;
+}
+
+.grid-container {
   width: 100%;
+  margin: 0;
+  display: grid;
+  grid-template-columns: 1fr;
+  box-sizing: border-box;
+}
+
+.grid-item {
+  grid-column: 2 / span 10;
+}
+
+.flex-container {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-content: center;
+  align-items: center;
+  box-sizing: border-box;
+}
+
+.flex-item {
+  flex-grow: 1;
+  box-sizing: border-box;
+}
+
+/* Header, menu and navigation */
+
+header {
+  width: 100vw;
   padding: 10px;
   box-sizing: inherit;
   position: relative;
 }
 
+header ul {
+  list-style: none;
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: baseline;
+  box-sizing: border-box;
+  margin: 0;
+}
+
+.logo {
+  height: 16px;
+  padding: 0;
+}
+
+.navbar {
+  z-index: 1000;
+  position: fixed;
+  top: 0;
+  padding: 0;
+  width: 100vw;
+  background-color: var(--secondary-color);
+  height: 90px;
+}
+
+.nav-brand {
+  margin-top: 0.875rem;
+  font-size: 16px;
+  font-weight: bolder;
+}
+
+.nav-item {
+  padding: 0.875rem 1rem;
+  text-transform: uppercase;
+  text-align: center;
+  font-size: 0.875rem;
+  color: var(--text-light);
+  margin: 0;
+}
+
+.menu {
+  flex-grow: 2;
+}
+
+.sub-menu {
+  display: none;
+}
+
+/* News items */
+.news-card {
+  background-color: var(--contrast-color-light);
+  padding: 2rem;
+  margin-bottom: 10px;
+  border-radius: 32px;
+  box-shadow: 2px 2px 10px 1px var(--secondary-color);
+  flex-direction: column;
+}
+
+.big-news {
+  text-align: center;
+}
+
+.other-news {
+  gap: 1rem;
+  align-items: baseline;
+}
+
+.extra {
+  line-height: 1;
+  font-size: 5em;
+  font-weight: 600;
+  text-transform: uppercase;
+  text-shadow: 5px 5px var(--base-text);
+  color: var(--secondary-color);
+  top: 20px;
+  z-index: 100;
+  position: relative;
+  text-align: center;
+  margin: 0;
+  max-width: 100%;
+}
+
+.news-category {
+  text-transform: uppercase;
+  display: inline;
+  font-weight: 600;
+  color: var(--secondary-color);
+  font-size: 0.875rem;
+}
+
+/* Texts */
 h1,
 h2,
 h3,
@@ -47,7 +215,7 @@ h1 {
 }
 
 h2 {
-  font-size: 2em;
+  font-size: 2.5em;
 }
 
 h3 {
@@ -60,91 +228,12 @@ a {
   cursor: pointer;
 }
 
+a:hover {
+  text-decoration: underline;
+}
+
 p {
   font-weight: 300;
-}
-
-img {
-  max-width: 100%;
-  display: block;
-}
-
-video {
-  max-width: 100%;
-  margin: auto;
-}
-
-header ul {
-  list-style: none;
-  width: 100%;
-  background-color: var(--contrast-color-light);
-  display: flex;
-  flex-wrap: wrap;
-  align-items: baseline;
-  box-sizing: border-box;
-}
-
-button {
-  border-radius: 5%;
-  background-color: var(--complement-color-1);
-  padding: 0.5em 1em;
-  text-align: center;
-  text-transform: uppercase;
-  text-size-adjust: 0.6em;
-  border: none;
-}
-
-.grid-container {
-  width: 100%;
-  margin: 0;
-  display: grid;
-  grid-template-columns: repeat(12, 1fr);
-  gap: 10px;
-}
-
-.grid-item {
-  grid-column: span 12;
-}
-
-.flex-container {
-  width: 100%;
-  margin: 0;
-  padding: 0;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-content: center;
-  align-items: center;
-  margin-bottom: 40px;
-  box-sizing: border-box;
-}
-
-.flex-item {
-  flex-grow: 0;
-}
-
-.logo {
-  max-width: 80px;
-}
-
-.nav-item {
-  padding: 1em;
-  text-transform: uppercase;
-  text-align: center;
-}
-
-.news-card {
-  background-color: var(--contrast-color-light);
-  padding: 10%;
-  margin-bottom: 10px;
-  border-radius: 5%;
-}
-
-/* Text format */
-.xs {
-  font-size: x-small;
-  letter-spacing: 1.1;
 }
 
 .h2 {
@@ -152,34 +241,14 @@ button {
   font-size: 2em;
 }
 
-.extra {
-  line-height: 1;
-  font-size: 4em;
-  font-weight: 600;
-  text-transform: uppercase;
-  text-shadow: 2px 5px var(--base-text);
-  color: var(--text-light);
-  margin-bottom: -0.5em;
-  z-index: 100;
-  position: relative;
-  text-align: center;
-}
-
-.news-category {
-  text-transform: uppercase;
-  display: inline;
-  font-weight: 600;
-  color: var(--secondary-color);
-}
-
 /* for tablets */
 @media (min-width: 668px) and (max-width: 1024px) {
+
   .grid-container {
     grid-template-columns: repeat(2, 1fr);
   }
 
   .flex-item {
-    width: 40%;
     flex-grow: 0;
     align-items: center;
   }
@@ -187,25 +256,37 @@ button {
 
 /* for screens larger than tablet */
 @media (min-width: 1025px) {
+  .wrapper {
+    max-width: 100%;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 30px;
+  }
+
   .grid-container {
     max-width: 100%;
     grid-template-columns: repeat(4, 1fr);
     gap: 30px;
   }
 
-  .col-l-2 {
-    grid-column: span 2;
+  .grid-item {
+    grid-column: 1 / span 4;
   }
 
-  .col-l-1 {
-    grid-column: span 1;
+  .shorts {
+    grid-column: 4 / span 1 !important;
   }
 
-  .flex-item {
-    width: 25%;
+  .sub-menu {
+    display: inherit;
   }
-}
 
-footer {
-  background-color: var(--secondary-color);
+  .other-news {
+    grid-area: 1 / 1 / auto / 4;
+    align-items: stretch;
+  }
+
+  .news-item {
+    width: 30%;
+    flex-grow: 0;
+  }
 }
