--- a/code/style.css
+++ b/code/style.css
@@ -576,14 +576,14 @@ p#header {
 
   h4 {
     padding: 63px 0 0 0;
-    font-size: 28px;
+    font-size: 22px;
     letter-spacing: 5px;
     font-weight: 300;
   }
 
   p#pumpkrec {
-    padding: 45px 40px 0 40px;
-    font-size: 24px;
+    padding: 15px 0 0 0;
+    font-size: 18px;
     font-family: 'Roboto', sans-serif;
     color: #aea58b;
   }
@@ -641,7 +641,6 @@ p#header {
     object-fit: cover;
     padding: 0 30px;
   }
-
 }
 
 
